1.20.1 port, game runs now (with stuff broken) :D